--- a/application/views/error/500.html
+++ b/application/views/error/500.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>500哟</title>
-    <link rel="stylesheet" type="text/css" href="css/error/errorStyle.css">
+    <link rel="stylesheet" type="text/css" href="/css/error/errorStyle.css">
 </head>
 
 <body>
