--- a/application/views/buling/count.html
+++ b/application/views/buling/count.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Echart2</title>
+    <title>buling年度报告</title>
 </head>
 <body>
-<div id="main" style="width:80%;height:400px;"></div>
-<div id="main2" style="width:80%;height:400px;"></div>
+<div id="main" style="width:80%;height:400px;margin: 50px;"></div>
+<div id="main2" style="width:80%;height:400px;margin: 50px;"></div>
 <script src="/plugs/echart/echarts-all.js"></script>
 <script>
     var myChart = echarts.init(document.getElementById('main'));
