--- a/application/views/buling/count.html
+++ b/application/views/buling/count.html
@@ -69,5 +69,6 @@
     var option = {% autoescape false %}{{option4}}{% endautoescape %};
     myChart.setOption(option);
 </script>
+<script type="text/javascript" src="//js.users.51.la/19375919.js"></script>
 </body>
 </html>
