--- a/application/views/buling/torrent.html
+++ b/application/views/buling/torrent.html
@@ -10,11 +10,13 @@
     {% for item in list %}
         <li><div>
             <p>名称：{{item.name}}</p>
+            <p>时间：{{item.time}}</p>
             <p>大小：{{item.size}}</p>
-            <p>活跃度：{{item.rank}}</p>
+            <p>热度：{{item.rank}}</p>
             <p style="color:blue;">磁力链接：{{item.link}}</p>
         </div><hr></li>
     {% endfor %}
 </ul>
+<script type="text/javascript" src="//js.users.51.la/19375919.js"></script>
 </body>
 </html>
