路由修正&页面修改

--- a/application/views/test.html
+++ b/application/views/test.html
@@ -10,7 +10,7 @@
         <p>看到这个页面说明你的站点已经可以正常运行</p>
         <p>欢迎使用!</p>
         <hr style="margin-bottom: 100px;">
-        <p style="">------精 简 php 框 架------</p>
+        <p style="">------精 简 php 框 架------ <small> © by wyq</small></p>
         <h2><span style="font-size: 30px;color:red;">S</span>ample <span style="font-size: 30px;color:red;">F</span>ramework - PHP</h2>
         <!--<h5><span style="font-size: 24px;color:red;">SF</span>就是我最喜欢的影魔啦，所以影魔镇楼咯</h5>-->
         <h1 style="padding-top:40px;color:red"><i>NEVER MORE!</i></h1>
